# netology_homework_2_11_3

CMakeLeaver/: CMakeLeaver.cpp  CMakeLists.txt  LeaverLibrary.cpp  LeaverLibrary.h
